deployment/gke/kube/edge_model_serving/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: edge-model-serving
  name: edge-model-serving
  namespace: vio
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: inference
      app.kubernetes.io/instance: vio
      app.kubernetes.io/name: edge-model-serving
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: inference
        app.kubernetes.io/instance: vio
        app.kubernetes.io/name: edge-model-serving
    spec:
      containers:
      - name: edge-model-serving
        image: europe-west1-docker.pkg.dev/acn-gcp-octo-sas/tf-vio-artifacts/edge_model_serving:0.1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
        readinessProbe:
          httpGet:
            port: http
            path: /ping
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
        livenessProbe:
          httpGet:
            port: http
            path: /ping
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
#      imagePullSecrets:
#        - name: github-container-registry
      restartPolicy: Always
