deployment/gke/kube/edge_model_serving/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
#    ingress.gcp.kubernetes.io/pre-shared-cert: vio
#    ingress.kubernetes.io/ingress.allow-http: "false"
#    kubernetes.io/ingress.global-static-ip-name: tf-vio-edge-model-serving
  name: edge-model-serving
  namespace: vio
spec:
  defaultBackend:
    service:
      name: edge-model-serving
      port:
        number: 8080
#  rules:
#  - host: inference.vio.octo.tools
#    http:
#      paths:
#      - backend:
#          service:
#            name: edge-model-serving
#            port:
#              number: 8080
#        path: /*
